# esp32s3GUI

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/esp_lcd_exio_pcf8574/: CMakeLists.txt  exio_pcf8574.c
components/esp_lcd_exio_pcf8574/include/: exio_pcf8574.h
components/esp_lcd_st7796u/: CMakeLists.txt  esp_lcd_st7796u.c
components/esp_lcd_st7796u/include/: esp_lcd_st7796u.h
components/esp_lcd_touch_cst826/: CMakeLists.txt  esp_lcd_touch_cst826.c
components/esp_lcd_touch_cst826/include/: esp_lcd_touch_cst826.h
doc/: architecture.md  description.txt
main/: CMakeLists.txt  Kconfig.projbuild  core_pins.h  idf_component.yml  main.c
main/bsp/: bsp_common.h
main/bsp/onx3248g035/: bsp_onx.c  bsp_onx.h  bsp_onx_backlight.c  bsp_onx_backlight.h  bsp_onx_bus.c  bsp_onx_bus.h  bsp_onx_lvgl.c  bsp_onx_lvgl.h  bsp_onx_panel.c  bsp_onx_panel.h  bsp_onx_pinmap.h  bsp_onx_touch.c  bsp_onx_touch.h
main/bsp/stub/: bsp_stub.c  bsp_stub.h
main/hal/: display_driver.c  display_driver.h
main/tasks/: ui_task.c  ui_task.h
main/ui/core/: ui_carousel.c  ui_carousel.h  ui_fps.c  ui_fps.h  ui_kit.c  ui_kit.h  ui_theme.c  ui_theme.h
main/ui/data/: fake_speakers.c  fake_speakers.h
main/ui/layout/: layout.c  layout.h
main/ui/screens/: screen_carousel.c  screen_carousel.h  screen_list.c  screen_list.h  screen_strony.c  screen_strony.h
main/ui/stub/: ui_stub.c  ui_stub.h
